# floor-of-literature

./: .eslintrc  .gitignore  README.md  babel.config.json  jest.config.js  nx.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.base.json  workspace.json
apps/api/: .env  Cargo.toml
apps/api/src/: main.rs
apps/api/src/libs/: encode.rs  mod.rs
apps/api/src/sign/: models.rs  services.rs
apps/frontend/: .eslintrc  jest.config.js  next.config.js
apps/frontend/components/button/: button.styl  index.tsx  types.ts
apps/frontend/components/literature/: index.tsx  literature.styl  types.ts
apps/frontend/components/textfield/: index.tsx  textfield.styl  types.ts
apps/frontend/pages/: _app.tsx  index.tsx  signin.tsx  signout.tsx  signup.tsx
apps/frontend/stores/: borrowed.ts  index.ts  token.ts
apps/frontend/styles/: init.styl
apps/frontend/test-helpers/: index.ts  provider.tsx  router.ts  setup.js
apps/literature/: .env  Cargo.toml
apps/literature/migrations/: 20200903104056_base.sql
apps/literature/src/: main.rs
apps/literature/src/libs/: encode.rs  jwt.rs  mod.rs
apps/literature/src/literature/: models.rs  services.rs
apps/sign/: .env  Cargo.toml
apps/sign/src/: main.rs
apps/sign/src/libs/: hash.rs  jwt.rs
benchmark/: signin.lua
libs/data/: jest.config.js
libs/data/src/: index.ts
libs/helpers/: jest.config.js
libs/helpers/src/: index.ts
libs/helpers/src/is/: index.ts
libs/icons/: .eslintrc  jest.config.js
libs/icons/src/: bookmark.tsx  heart.tsx  index.tsx  search.tsx  types.ts
libs/types/: jest.config.js
(+15 files in other folders)
