[package]
name = "literature-api"
version = "0.1.0"
authors = ["SaltyAom <aomkirby@mystiar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-cors = '0.2.0'
actix-identity = "0.2.1"

sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid" ] }

serde = "1.0.115"
serde_json = "1.0.57"

futures = "0.3.5"
dotenv = "0.15.0"

jsonwebtoken = "7"
uuid = { version = "0.8", features = ["serde", "v4"] }

data-encoding = "2.3.0"
ring = "0.16.15"
magic-crypt = "3.1.5"

anyhow = "1.0.32"