[package]
name = "sign-api"
version = "0.1.0"
authors = ["SaltyAom <aomkirby@mystiar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
tokio = "0.2.22"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-redis = "0.8.2"
actix-identity = "0.2.1"
actix-cors = '0.2.0'

redis-async = "0.6.2"

serde = "1.0.115"
serde_json = "1.0.57"

futures = "0.3.5"
dotenv = "0.15.0"

jsonwebtoken = "7"
uuid = { version = "0.8", features = ["serde", "v4"] }

data-encoding = "2.3.0"
ring = "0.16.15"
magic-crypt = "3.1.5"